# MAVIS

./: .gitignore  CMakeLists.txt  README.md  mavis.cpp
configuration/: config.h  types.h
dataset/test1/: run_test.sh
dataset/test1/data_graph/: HPRD_compressed.graph
dataset/test1/example/: query_graph.graph  view1.graph  view2.graph
dataset/test1/query_subgraph/: mapping_dense_16_1.txt  mapping_dense_16_10.txt  mapping_dense_16_100.txt  mapping_dense_16_105.txt  mapping_dense_16_107.txt  mapping_dense_16_109.txt  mapping_dense_16_115.txt  mapping_dense_16_12.txt  mapping_dense_16_120.txt  mapping_dense_16_122.txt  (+274 more)
graph/: CMakeLists.txt  graph.cpp  graph.h
utility/: CMakeLists.txt  QFilter.h  commandparser.cpp  commandparser.h  computesetintersection.cpp  computesetintersection.h  global_variables.cpp  global_variables.h  graphoperations.cpp  graphoperations.h  pretty_print.h
utility/han/: intersection_algos.cpp  intersection_algos.hpp
utility/hashjoin/: hash_helpers.h  hashjoins_test.cpp  nop_join.cpp  nop_join.h
utility/leapfrogtriejoin/: leapfrogtriejoin.cpp  leapfrogtriejoin.h
utility/nucleus_decomposition/: bucket.cpp  bucket.h  hierarchy.cpp  k3-4.cpp  kcore.cpp  ktruss.cpp  nd.h  nd_interface.cpp  nd_interface.h  util.cpp
utility/primitive/: nlf_filter.cpp  nlf_filter.h  projection.cpp  projection.h  scan.cpp  scan.h  search.cpp  search.h  semi_join.cpp  semi_join.h
utility/relation/: catalog.cpp  catalog.h  edge_relation.h  encoded_trie_relation.h  flat_relation.h  hash_relation.h  reverse_index.h  trie_relation.h
utility/sparsepp/: spp.h
view_matching/: CMakeLists.txt
view_matching/answer/: CMakeLists.txt  auxilary_info.h  encoder.cpp  encoder.h  enumerate.cpp  enumerate.h  planner.cpp  planner.h  preprocessor.cpp  preprocessor.h  query_plan_generator.cpp  query_plan_generator.h  query_plan_generator1.cpp  query_plan_generator1.h  rewrite_query.cpp  rewrite_query.h  rm_filter.cpp  rm_filter.h  simple_matching.cpp  simple_matching.h  sparse_bitset.h
view_matching/utils/: BitSet.h  CMakeLists.txt  MyUtils.cpp  MyUtils.h  combination.cpp  combination.h  compressed_bitset.h  global_vars.cpp  global_vars.h  multilayer_trie.cpp  multilayer_trie.h  preprocessor1.cpp  preprocessor1.h  subgraph_estimator.cpp  subgraph_estimator.h  subgraph_filter.cpp  subgraph_filter.h
view_matching/view/: CMakeLists.txt  edge_iterator.cpp  edge_iterator.h  mat_view_builder.cpp  mat_view_builder.h  mat_view_updater.cpp  mat_view_updater.h
view_matching/view/materialization/: CMakeLists.txt  edge_materializer.cpp  edge_materializer.h  materializer.cpp  materializer.h  node_materializer.cpp  node_materializer.h  view_filter.cpp  view_filter.h
view_matching/view/partition/: CMakeLists.txt  abstract_query_decomposer.h  finergrained_decomposer.cpp  finergrained_decomposer.h  simple_tree_partition.cpp  simple_tree_partition.h  tree_partitioner.cpp  tree_partitioner.h
view_matching/view/storage/: CMakeLists.txt  mat_view.cpp  mat_view.h  super_data_edge.cpp  super_data_edge.h  super_data_node.cpp  super_data_node.h  super_query_graph.cpp  super_query_graph.h
(+2 files in other folders)
